[workspace]
members = [
    "michiru-bthome",
    "michiru-device",
    "michiru-home-assistant",
    "michiru-inspector",
    "michiru-zigbee2mqtt",
]
resolver = "2"

[workspace.dependencies]
michiru-bthome = { path = "michiru-bthome" }
michiru-device = { path = "michiru-device" }
michiru-home-assistant = { path = "michiru-home-assistant" }
michiru-inspector = { path = "michiru-inspector" }
