[package]
name = "michiru-bthome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
btleplug = "0.11.1"
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
rand = "0.8.5"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.28.2", features = ["full"] }
uuid = "1.3.4"
