[package]
name = "michiru-inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
chrono = "0.4.31"
eframe = { version = "0.23.0", features = ["persistence"] }
egui = { version = "0.23.0", features = ["persistence"] }
egui_dock = "0.8.0"
egui_extras = "0.23.0"
egui_json_tree = "0.1.0"
itertools = "0.11.0"
rumqttc = "0.22.0"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
